<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iQuiz</string>

    <string name="title_section1">Главная</string>
    <string name="title_section2">Категории</string>
    <string name="title_section3">Профиль</string>
    <string name="title_section4">Рейтинг</string>
    <string name="title_section5">Магазин</string>
    <string name="title_section6">Магазин</string>

    <string name="action_settings">Settings</string>
    <string name="topics_title">Темы</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginBtn">ВОЙТИ</string>
    <string name="signupBtn">РЕГИСТРАЦИЯ</string>
    <string name="logoutBtn">Log Out</string>
    <string name="mail">Mail</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="rating_section1">Неделя</string>
    <string name="rating_section2">Месяц</string>
    <string name="points_numder">0</string>
    <string name="points_word">Достижения</string>
    <string name="friends_word">Друзья</string>
    <string name="name">Имя</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="settings_profile">Настройки</string>
    <string name="others_ratings">Другие</string>
    <string name="title_activity_choise_rating_cat_or_topic">ChoiseRatingCatOrTopic</string>
    <string name="titile_section_topics">Темы</string>
    <string name="title_section_categoryies">Категории</string>
    <string name="title_activity_choice_cat_or_topic">ChoiceCatOrTopicActivity</string>
    <string name="title_section_topics">Темы</string>
    <string name="signupVkBtn">ВКОНТАКТЕ</string>
    <string name="open_list_view">Открыть заявки в друзья</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="action_searching">Поиск</string>
    <string name="search_title">Поиск</string>
    <string name="topic_word">тема</string>
    <string name="waiting">ожидание противника...</string>
    <string name="fact">Знаете ли вы, что...</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_main_sliding">MainSlidingActivity</string>
    <string name="challenge">Бросить вызов</string>
    <string name="more_rating">Показать</string>

    <declare-styleable name="food">
        <attr name="state_my_answer" format="boolean" />
        <attr name="state_opponents_answer" format="boolean" />
    </declare-styleable>
    <string name="title_activity_more_rating">MoreRatingActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="just_activity">Рейтинги</string>
    <string name="title_activity_rating_cat_topic">RatingCatTopicActivity</string>
    <string name="title_activity_rating_two_tabs">RatingTwoTabsActivity</string>

</resources>
