<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_vertical"
              android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/topic_word"
            />

        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/topic_word"
            android:id="@+id/name_of_topic"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fact"
            android:id="@+id/interesting_fact"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/waiting"
            android:id="@+id/textView5"/>
    </LinearLayout>

</LinearLayout>



