<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    >



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/common_signin_btn_light_text_pressed"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        style="@style/MyGreyCard"
        android:paddingTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/my_photo_imageView"
                android:scaleType="centerCrop"
                app:siBorderWidth="2dp"
                app:siBorderColor="#FF000000"
                app:siSquare="true"
                android:layout_gravity="center"/>



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:text="@string/friends_word"
                              style="?android:textViewStyle"
                              android:gravity="center"
                              android:textSize="16dp"/>

                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:text="0"
                              style="?android:textViewStyle"
                              android:gravity="center"
                              android:textStyle="bold"
                              android:id="@+id/number_of_friends"
                              android:textSize="18dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:text="@string/points_word"
                              style="?android:textViewStyle"
                              android:gravity="center"
                              android:autoText="false"
                              android:textSize="16dp"/>

                    <TextView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/points_numder"
                        style="?android:textViewStyle"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:id="@+id/number_of_achievements"/>

                </LinearLayout>

            </LinearLayout>

            <Button android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:id="@+id/milti_button"
                    android:text="@string/add_friend"
                    android:background="@drawable/blue_button"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:weightSum="3"
        android:paddingTop="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="ПОБЕД"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="#111111"
                android:layout_gravity="center"
                android:id="@+id/textView6"/>

            <TextView
                android:id="@+id/profile_wins"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:background="@drawable/circle"

                android:gravity="center"
                android:text="234"
                android:textColor="#333333"
                android:textStyle="bold"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="НИЧЬИХ"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="#111111"
                android:layout_gravity="center"
                android:id="@+id/textView7"/>

            <TextView
                android:id="@+id/profile_dead_heats"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="4"
                android:textColor="#333333"
                android:textStyle="bold"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="ПОРАЖЕНИЙ"
                android:textStyle="bold"
                android:textSize="11sp"
                android:textColor="#111111"
                android:layout_gravity="center"
                android:id="@+id/textView8"/>

            <TextView
                android:id="@+id/profile_defeats"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="142"
                android:textColor="#333333"
                android:textStyle="bold"
                android:textSize="25sp" />
        </LinearLayout>






    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Друзья:"
            android:id="@+id/textView9"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/friends_wrapper"
            android:layout_gravity="center_vertical"
            android:scrollbars="none" >

            <LinearLayout
                android:id="@+id/id_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Достижения:"
            android:id="@+id/textView10"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/horizontalScrollView"
            android:layout_gravity="center_vertical"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"/>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="#3f3f3f"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView11"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/profile_favorite_topics_listview"
            />
    </LinearLayout>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/open_list"
            android:text="@string/open_list_view"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
        />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/challenge"
            android:text="@string/challenge"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
        />

    <TextView android:layout_width="match_parent"
              android:layout_weight="1"

              android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name"
        style="?android:textViewStyle"
        android:textSize="20dp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:padding="20dp"/>





</LinearLayout>

</ScrollView>